[workspace]
members = [
    # Common libs
    "libs/das-core",
    "libs/das-dynamic-libs",
    "libs/das-map",
    "libs/das-sorted-list",
    "libs/eip712",
    "libs/simple-ast",
    "libs/das-types",
    # Contracts
    "contracts/always-success",
    "contracts/account-cell-type",
    "contracts/account-sale-cell-type",
    "contracts/account-auction-cell-type",
    "contracts/apply-register-cell-type",
    "contracts/balance-cell-type",
    "contracts/config-cell-type",
    "contracts/income-cell-type",
    "contracts/offer-cell-type",
    "contracts/pre-account-cell-type",
    "contracts/proposal-cell-type",
    "contracts/reverse-record-cell-type",
    "contracts/reverse-record-root-cell-type",
    "contracts/sub-account-cell-type",
    "contracts/eip712-lib",
    "contracts/device-key-list-cell-type",
    "contracts/dpoint-cell-type",
    # Only for unit tests
    "tests",
    "contracts/test-env",
    "contracts/test-custom-script",
    "contracts/playground",
]

default-members = [
    "contracts/always-success",
    "contracts/account-cell-type",
    "contracts/account-sale-cell-type",
    "contracts/account-auction-cell-type",
    "contracts/apply-register-cell-type",
    "contracts/balance-cell-type",
    "contracts/config-cell-type",
    "contracts/income-cell-type",
    "contracts/offer-cell-type",
    "contracts/pre-account-cell-type",
    "contracts/proposal-cell-type",
    "contracts/reverse-record-cell-type",
    "contracts/reverse-record-root-cell-type",
    "contracts/sub-account-cell-type",
    "contracts/eip712-lib",
    "contracts/device-key-list-cell-type",
    "contracts/dpoint-cell-type",
]

[workspace.dependencies]
das-types = { path = "libs/das-types", default-features = false }
simple-ast = { path = "libs/simple-ast", default-features = false }
das-map = { path = "libs/das-map", default-features = false }
das-core = { path = "libs/das-core", default-features = false }
das-sorted-list = { path = "libs/das-sorted-list", default-features = false }
sparse-merkle-tree = { version = "0.6.1", default-features = false, features = [
    "smtc",
] }
ckb-std = "0.13.0"
ckb-types = { version = "=0.108.0" }
molecule = { version = "0.7", default-features = false }
hex = { default-features = false, version = "0.4.2" }

[profile.release]
overflow-checks = true
opt-level = 2
lto = true
codegen-units = 1
panic = 'abort'
