[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ckb-testtool = { git = "https://github.com/DA-Services/ckb-testtool", tag = "v0.7.3" }
#ckb-testtool = { path = "../../ckb-testtool" }
# CKB related dependencies
ckb-mock-tx-types = "=0.105.1"
ckb-script = { version="=0.105.1", default-features = false }
ckb-chain-spec = "=0.105.1"
ckb-types = "=0.105.1"
ckb-hash = "=0.105.1"
ckb-jsonrpc-types = "=0.105.1"
das-sorted-list = { path = "../libs/das-sorted-list", features = ["std"] }
das-types-std = { path = "../../das-types-std/rust" }
# Other
hex = "0.4.2"
lazy_static = "1.4.0"
secp256k1 = { version = "0.25.0", features = ["recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
regex = "1.0"
walkdir = "2"
rand = "0.8.3"
chrono = { version = "0.4" }
sparse-merkle-tree = { git = "https://github.com/nervosnetwork/sparse-merkle-tree.git", default-features = false }
