[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ckb-testtool = { git = "https://github.com/DA-Services/ckb-testtool", tag = "v0.7.3" }
#ckb-testtool = { path = "../../ckb-testtool" }
# CKB related dependencies
ckb-mock-tx-types = "=0.108.0"
ckb-script = { version="=0.108.0", default-features = false }
ckb-traits = { version="=0.108.0" }
ckb-chain-spec = "=0.108.0"
ckb-types = "=0.108.0"
ckb-hash = "=0.108.0"
ckb-jsonrpc-types = "=0.108.0"
das-sorted-list = { workspace = true, features = ["std"] }
das-types-std = { workspace = true }
simple-ast = { workspace = true, features = ["std"], default-features = false }
# Other
hex = "0.4.3"
thiserror = { version = "1.0" }
lazy_static = "1.4.0"
secp256k1 = { version = "0.25.0", features = ["recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
regex = "1.0"
walkdir = "2"
rand = "0.8.3"
chrono = { version = "0.4" }
sparse-merkle-tree = { version = "0.6.1" }
