[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace crates
das-types = { workspace = true, features = ["std"] }
simple-ast = { workspace = true, features = ["std"] }
das-sorted-list = { workspace = true, features = ["std"] }
device-key-list-cell-type = { path = "../contracts/device-key-list-cell-type" }
dpoint-cell-type = { path = "../contracts/dpoint-cell-type" }
# ckb crates
#ckb-testtool = { git = "https://github.com/DA-Services/ckb-testtool", tag = "v0.7.3" }
#ckb-testtool = { path = "../../ckb-testtool" }
ckb-mock-tx-types = "=0.108.0"
ckb-script = { version="=0.108.0", default-features = false }
ckb-traits = { version="=0.108.0" }
ckb-chain-spec = "=0.108.0"
ckb-hash = "=0.108.0"
ckb-jsonrpc-types = "=0.108.0"
ckb-types = { workspace = true }
sparse-merkle-tree = { version = "0.6.1" }
# third party crates
hex = "0.4.3"
thiserror = { workspace = true }
lazy_static = "1.4.0"
secp256k1 = { version = "0.25.0", features = ["recovery"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
regex = "1.0"
walkdir = "2"
rand = "0.8.3"
chrono = { version = "0.4" }
primitive-types = { workspace = true }
