[package]
name = "account-cell-type"
version = "1.7.0"
edition = "2021"

[features]
dev = ["das-core/dev", "das-dynamic-libs/dev"]
local = ["das-core/local", "das-dynamic-libs/local"]
testnet = ["das-core/testnet", "das-dynamic-libs/testnet"]
mainnet = ["das-core/mainnet", "das-dynamic-libs/mainnet"]

[dependencies]
ckb-std = { workspace = true }
das-core = { workspace = true, default-features = false }
das-map = { workspace = true, default-features = false }
das-types = { workspace = true, default-features = false }
das-dynamic-libs = { path = "../../libs/das-dynamic-libs" }
