[package]
name = "account-cell-type"
version = "1.7.0"
edition = "2021"

[features]
dev = ["das-core/dev"]
local = ["das-core/local"]
testnet = ["das-core/testnet"]
mainnet = ["das-core/mainnet"]

[dependencies]
das-core = { workspace = true }
das-map = { workspace = true }
das-types = { workspace = true, features = ["no_std"] }
das-dynamic-libs = { workspace = true }
witness-parser = { workspace = true, features = ["no_std"] }
ckb-std = { workspace = true }
