[package]
name = "account-sale-cell-type"
version = "1.1.0"
edition = "2018"

[features]
dev = ["das-core/dev"]
local = ["das-core/local"]
testnet = ["das-core/testnet"]
mainnet = ["das-core/mainnet"]

[dependencies]
ckb-std = "0.8.0"
das-map = { path = "../../libs/das-map" }
das-core = { path = "../../libs/das-core", default-features = false }
das-types = { path = "../../../das-types/rust", default-features = false }
chrono = { version = "0.4", default-features = false }
