[package]
name = "account-sale-cell-type"
version = "1.1.1"
edition = "2021"

[features]
dev = ["das-core/dev"]
local = ["das-core/local"]
testnet = ["das-core/testnet"]
mainnet = ["das-core/mainnet"]

[dependencies]
ckb-std = { workspace = true }
das-map = { workspace = true }
das-core = { workspace = true, default-features = false }
das-types = { workspace = true, default-features = false, features = ["no_std"] }
chrono = { version = "0.4", default-features = false }
