[package]
name = "apply-register-cell-type"
version = "1.1.0"
edition = "2021"

[features]
dev = ["das-core/dev"]
local = ["das-core/local"]
testnet = ["das-core/testnet"]
mainnet = ["das-core/mainnet"]

[dependencies]
# workspace crates
das-core = { workspace = true, default-features = false }
das-types = { workspace = true, default-features = false, features = ["no_std"] }
witness-parser = { workspace = true, default-features = false, features = ["no_std"] }
# ckb crates
ckb-std = { workspace = true }
# third party crates
hex = { workspace = true, default-features = false }
anyhow = { workspace = true, default-features = false }
