[package]
name = "apply-register-cell-type"
version = "1.1.0"
edition = "2021"

[features]
dev = ["das-core/dev"]
local = ["das-core/local"]
testnet = ["das-core/testnet"]
mainnet = ["das-core/mainnet"]

[dependencies]
das-core = { workspace = true }
das-types = { workspace = true, features = ["no_std"] }
witness-parser = { workspace = true, features = ["no_std"] }
ckb-std = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
