[package]
name = "balance-cell-type"
version = "1.2.0"
edition = "2018"

[features]
dev = ["das-core/dev"]
local = ["das-core/local"]
testnet = ["das-core/testnet"]
mainnet = ["das-core/mainnet"]

[dependencies]
ckb-std = "0.8.0"
das-core = { path = "../../libs/das-core", default-features = false }
eip712 = { path = "../../libs/eip712" }
das-types = { path = "../../../das-types/rust", default-features = false }
das-map = { path = "../../libs/das-map" }
