[package]
name = "balance-cell-type"
version = "1.3.0"
edition = "2021"

[features]
dev = ["das-core/dev"]
local = ["das-core/local"]
testnet = ["das-core/testnet"]
mainnet = ["das-core/mainnet"]

[dependencies]
ckb-std = { git = "https://github.com/XuJiandong/ckb-std.git", branch = "load-library-typeid" }
das-core = { path = "../../libs/das-core", default-features = false }
das-types = { path = "../../../das-types/rust", default-features = false }
das-map = { path = "../../libs/das-map" }
