[package]
name = "eip712-lib"
version = "1.1.0"
edition = "2021"

[features]
dev = ["das-core/dev", "eip712/dev"]
local = ["das-core/local", "eip712/local"]
testnet = ["das-core/testnet", "eip712/testnet"]
mainnet = ["das-core/mainnet", "eip712/mainnet"]

[dependencies]
das-core = { workspace = true }
das-types = { workspace = true, features = ["no_std"] }
das-map = { workspace = true }
eip712 = { workspace = true }
ckb-std = { workspace = true }
