[package]
name = "income-cell-type"
version = "1.2.1"
edition = "2021"

[features]
dev = ["das-core/dev"]
local = ["das-core/local"]
testnet = ["das-core/testnet"]
mainnet = ["das-core/mainnet"]

[dependencies]
ckb-std = { workspace = true }
hex = { workspace = true, default-features = false }
das-core = { workspace = true, default-features = false }
das-types = { workspace = true, default-features = false }
