[package]
name = "income-cell-type"
version = "1.2.1"
edition = "2021"

[features]
dev = ["das-core/dev"]
local = ["das-core/local"]
testnet = ["das-core/testnet"]
mainnet = ["das-core/mainnet"]

[dependencies]
das-core = { workspace = true }
das-types = { workspace = true, features = ["no_std"] }
ckb-std = { workspace = true }
hex = { workspace = true }
