[package]
name = "playground"
version = "1.0.0"
edition = "2021"

[features]
dev = ["das-core/dev"]
local = ["das-core/local"]
testnet = ["das-core/testnet"]
mainnet = ["das-core/mainnet"]

[dependencies]
ckb-std = { workspace = true }
hex = { workspace = true }
das-core = { workspace = true }
das-types = { workspace = true, features = ["no_std"] }
sparse-merkle-tree = { workspace = true }
blake2b-ref = "0.3"
libm = "0.2"
