[package]
name = "pre-account-cell-type"
version = "1.4.0"
edition = "2021"

[features]
dev = ["das-core/dev"]
local = ["das-core/local"]
testnet = ["das-core/testnet"]
mainnet = ["das-core/mainnet"]

[dependencies]
ckb-std = { git = "https://github.com/XuJiandong/ckb-std.git", branch = "load-library-typeid" }
hex = { default-features = false, version = "0.4.2"}
das-core = { path = "../../libs/das-core", default-features = false }
das-sorted-list = { path = "../../libs/das-sorted-list" }
das-types = { path = "../../../das-types/rust", default-features = false }
chrono = { version = "0.4", default-features = false }
