[package]
name = "proposal-cell-type"
version = "1.3.0"
edition = "2021"

[features]
dev = ["das-core/dev"]
local = ["das-core/local"]
testnet = ["das-core/testnet"]
mainnet = ["das-core/mainnet"]

[dependencies]
das-core = { workspace = true }
das-sorted-list = { workspace = true }
das-map = { workspace = true }
das-types = { workspace = true, features = ["no_std"] }
witness-parser = { workspace = true, features = ["no_std"] }
ckb-std = { workspace = true }
chrono = { workspace = true }
