[package]
name = "reverse-record-root-cell-type"
version = "1.0.0"
edition = "2021"

[features]
dev = ["das-core/dev"]
local = ["das-core/local"]
testnet = ["das-core/testnet"]
mainnet = ["das-core/mainnet"]

[dependencies]
ckb-std = { workspace = true }
hex = { workspace = true, default-features = false }
das-core = { workspace = true, default-features = false }
das-types = { workspace = true, default-features = false, features = ["no_std"] }
sparse-merkle-tree = { workspace = true }
das-dynamic-libs = { path = "../../libs/das-dynamic-libs" }
