[package]
name = "sub-account-cell-type"
version = "1.3.2"
edition = "2021"

[features]
dev = ["das-core/dev", "das-dynamic-libs/dev"]
local = ["das-core/local", "das-dynamic-libs/local"]
testnet = ["das-core/testnet", "das-dynamic-libs/testnet"]
mainnet = ["das-core/mainnet", "das-dynamic-libs/mainnet"]

[dependencies]
ckb-std = { workspace = true }
hex = { workspace = true, default-features = false }
das-core = { workspace = true, default-features = false }
das-types = { workspace = true, default-features = false }
sparse-merkle-tree = { workspace = true }
das-dynamic-libs = { path = "../../libs/das-dynamic-libs" }
das-map = { workspace = true }
simple-ast = { workspace = true, features = ["no_std"], default-features = false }
blake2b-ref = "0.3"
