[package]
name = "sub-account-cell-type"
version = "1.3.2"
edition = "2021"

[features]
dev = ["das-core/dev"]
local = ["das-core/local"]
testnet = ["das-core/testnet"]
mainnet = ["das-core/mainnet"]

[dependencies]
das-core = { workspace = true }
das-types = { workspace = true, features = ["no_std"] }
das-dynamic-libs = { workspace = true }
das-map = { workspace = true }
simple-ast = { workspace = true, features = ["no_std"] }
witness-parser = { workspace = true, features = ["no_std"] }
ckb-std = { workspace = true }
sparse-merkle-tree = { workspace = true }
hex = { workspace = true }
blake2b-ref = "0.3"
