[package]
name = "test-custom-script"
version = "1.0.0"
edition = "2021"

[features]
dev = ["das-core/dev"]
local = ["das-core/local"]
testnet = ["das-core/testnet"]
mainnet = ["das-core/mainnet"]

[dependencies]
ckb-std = { workspace = true }
hex = { default-features = false, version = "0.4.2" }
das-core = { workspace = true, default-features = false }
das-types = { workspace = true, default-features = false }
