[package]
name = "test-env"
version = "1.0.0"
edition = "2021"

[features]
dev = ["das-core/dev"]
local = ["das-core/local"]
testnet = ["das-core/testnet"]
mainnet = ["das-core/mainnet"]

[dependencies]
witness-parser = { workspace = true, features = ["no_std"] }
simple-ast = { workspace = true, features = ["no_std"] }
das-core = { workspace = true }
das-types = { workspace = true, features = ["no_std"] }
ckb-std = { workspace = true }
hex = { workspace = true }
primitive-types = { workspace = true }
rust_decimal = { version = "1.34.3", default-features = false, features = ["maths"] }

[build-dependencies]
dotenvy = { workspace = true }
