[package]
name = "wallet-cell-type"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.7.1"
das-core = { path = "../../libs/das-core" }
das-types = { path = "../../../das-types/rust", default-features = false }
