[package]
name = "das-core"
version = "1.4.0"
edition = "2018"

[features]
default = ["dev"]
dev = []
local = []
testnet = []
mainnet = []

[dependencies]
ckb-std = "0.8.0"
blake2b-ref = "0.3"
das-types = { path = "../../../das-types/rust", default-features = false }
eip712 = { path = "../../libs/eip712" }
chrono = { version = "0.4", default-features = false }
das-map = { path = "../das-map", default-features = false }
bech32 = { version = "0.8.1", default-features = false }
bs58 = { version = "0.4.0", default-features = false, features = [ "alloc" ] }
sha2 = { version = "0.9.6", default-features = false }
sparse-merkle-tree = { git = "https://github.com/nervosnetwork/sparse-merkle-tree.git", default-features = false }
das-dynamic-libs = { path = "../../libs/das-dynamic-libs" }

[dev-dependencies]
hex = { version = "0.4", default-features = false }
