[package]
name = "das-core"
version = "1.4.0"
edition = "2021"

[features]
default = ["dev"]
dev = ["eip712/dev"]
local = ["eip712/local"]
testnet = ["eip712/testnet"]
mainnet = ["eip712/mainnet"]

[dependencies]
blake2b-ref = "0.3"
chrono = { version = "0.4", default-features = false }
das-map = { path = "../das-map", default-features = false }
bech32 = { version = "0.8.1", default-features = false }
bs58 = { version = "0.4.0", default-features = false, features = [ "alloc" ] }
sha2 = { version = "0.9.6", default-features = false }
ckb-std = { workspace = true }
sparse-merkle-tree = { workspace = true }
das-types = { workspace = true, default-features = false }
simple-ast = { workspace = true, features = ["no_std"], default-features = false }
eip712 = { path = "../../libs/eip712" }
das-dynamic-libs = { path = "../../libs/das-dynamic-libs" }
paste = "1.0"

[dev-dependencies]
hex = { version = "0.4", default-features = false }
