[package]
name = "das-core"
version = "1.4.0"
edition = "2021"

[features]
dev = []
local = []
testnet = []
mainnet = []

[dependencies]
das-map = { workspace = true }
das-types = { workspace = true, features = [ "no_std" ] }
simple-ast = { workspace = true, features = ["no_std"] }
witness-parser = { workspace = true, features = ["no_std"] }
eip712 = { workspace = true }
das-dynamic-libs = { workspace = true }
ckb-std = { workspace = true }
sparse-merkle-tree = { workspace = true }
molecule = { workspace = true }
blake2b-ref = { workspace = true }
chrono = { workspace = true }
paste = { workspace = true }
hex = { workspace = true }
# das-core only crates
libm = { version = "0.2", default-features = false }
