[package]
name = "das-types"
version = "1.11.0"
edition = "2021"

[lib]
path = "rust/src/lib.rs"

[features]
default = [ "std" ]
std = [
    "dep:serde",
    "ckb-types",
    "blake2b-rs"
]
no_std = [
    "ckb-std",
    "blake2b-ref",
]

[dependencies]
ckb-std = { workspace = true, optional = true }
ckb-types = { workspace = true, optional = true }
blake2b-rs = { workspace = true, optional = true }
blake2b-ref = { workspace = true, optional = true }
molecule = { workspace = true }
strum = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true, optional = true }
hex = { workspace = true }

[build-dependencies]
dotenvy = { workspace = true }
